# fiit-lottify

./: Cargo.toml  Fox_baked.glb.json  README.md  bocchi.glb.json  camera.glb.json  camera3.glb.json  champagne.json  cube.glb.json  cubeee.json  donut.glb.json  double_donut.glb.json  exp2_mat.glb.json  mazda.glb.json  notes.txt  pokeball.glb.json
assets/: Artboard 1.json  FB.glb  Fox.glb  Fox_baked.glb  Main Scene.json  bocchi.glb  bocchi_the_rock__gotoh_hitori.glb  camera.glb  camera2.glb  camera3.glb  cape.glb  cape2.glb  car.glb  cube.glb  cube2.glb  donut.glb  double_donut.glb  exp.glb  exp2_mat.glb  flipper.glb  generated.json  kite.glb  kite.gltf  lottielab_test.json  mario.glb  p2.glb  penguin.glb  penguin.gltf  planes.glb  pokeball.glb  prototype.glb  shader.wgsl  sphere.glb  squares.json  test.glb  test_lottie.json  tri_overlap.glb  triangle.glb  triangle_lottie.json  untitled.glb
src/: draw.rs  edge.rs  export.rs  export_schedule.rs  lottie.rs  main.rs  shader.rs  tmp.rs  ui.rs
src/systems/: animation.rs  cache.rs  camera.rs  mod.rs  update.rs
src/vectorize/: draw.rs  mod.rs  models.rs
